// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds bkEkLP sc-cHPgQl dLNfax sc-KfMfS dLjbBZ"
    >
      <h3
        class="sc-gXmSlM kKsxAv sc-cCsOjp kdvCNm"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-fWIMVQ jMbSIt"
  >
    <div
      class="sc-gKXOVf QRSBg sc-iBkjds bkEkLP sc-cHPgQl geNtXS sc-KfMfS dLjbBZ"
    >
      <h3
        class="sc-gXmSlM kKsxAv sc-cCsOjp kdvCNm"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
